@@ -42,6 +42,10 @@ public class Command {
    /** The label is used by all event except irEvent. */
    private String label = "";
    
+   private String deviceName = "";
+   
+   private String deviceId = "";
+   
    /**
     * Gets the id.
     * 
@@ -131,5 +135,25 @@ public class Command {
    public void setLabel(String label) {
       this.label = label;
    }
-   
+
+  public String getDeviceName()
+  {
+    return deviceName;
+  }
+
+  public void setDeviceName(String deviceName)
+  {
+    this.deviceName = deviceName;
+  }
+
+  public String getDeviceId()
+  {
+    return deviceId;
+  }
+
+  public void setDeviceId(String deviceId)
+  {
+    this.deviceId = deviceId;
+  }
+  
 }
